--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
 
+## Java template
+*.class
+
+
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+
+
+*.iml
+
+## Directory-based project format:
+.idea/
+
+## Plugin-specific files:
+
+# IntelliJ
+/out/
+
+
